--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Investar | Online trading platform</title>
+    
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet"> 
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
